--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -42,13 +42,14 @@ $su-washer: "\f11a";
 $su-sewing-machine: "\f11d";
 $su-clock: "\f120";
 $su-clock-2: "\f126";
+$su-sandals-2: "\e90a";
+$su-sandals: "\e90b";
+$su-robe-2: "\e94b";
 $su-purse: "\e901";
 $su-bag-2: "\e906";
 $su-bag: "\e907";
 $su-hat: "\e908";
 $su-gloves: "\e909";
-$su-sandal-2: "\e90a";
-$su-sandal: "\e90b";
 $su-slipper-3: "\e90c";
 $su-slipper-2: "\e90d";
 $su-slipper: "\e90e";
@@ -112,7 +113,6 @@ $su-shirt-polo-2: "\e947";
 $su-blazer: "\e948";
 $su-sweater: "\e949";
 $su-dress-3: "\e94a";
-$su-robe-1: "\e94b";
 $su-uniform: "\e94c";
 $su-dress-2: "\e94d";
 $su-pants-4: "\e94e";
