--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,11 +2,11 @@
 
 @font-face {
   font-family: '#{$icomoon-font-family}';
-  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?q6fr89');
-  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?q6fr89#iefix') format('embedded-opentype'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?q6fr89') format('truetype'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?q6fr89') format('woff'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?q6fr89##{$icomoon-font-family}') format('svg');
+  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?wm9c0b');
+  src:  url('#{$icomoon-font-path}/#{$icomoon-font-family}.eot?wm9c0b#iefix') format('embedded-opentype'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?wm9c0b') format('truetype'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?wm9c0b') format('woff'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?wm9c0b##{$icomoon-font-family}') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -230,6 +230,11 @@
 .su-clock-2 {
   &:before {
     content: $su-clock-2; 
+  }
+}
+.su-shirt {
+  &:before {
+    content: $su-shirt; 
   }
 }
 .su-sandals-2 {
@@ -655,11 +660,6 @@
 .su-shirt-polo {
   &:before {
     content: $su-shirt-polo; 
-  }
-}
-.su-shirt {
-  &:before {
-    content: $su-shirt; 
   }
 }
 .su-tank {
